# UAForge

./: .gitignore  ANDROID_FIX_SUMMARY.md  MANIFEST.in  OPTIMIZATIONS.md  README.md  REPORT.md  SESSION_FEATURE.md  pyproject.toml  setup.py  test.py  test_seed_session.py
.github/workflows/: python-tests.yml  tests.yml  update-market-share.yml
bench/: benchmark_generator.py  compare_modes.py  profile_generator.py
market_agent/: exceptions.py
market_agent/core/: generator.py  versioning.py
market_agent/data/: README.md  device_models.json  loader.py  mappings.py  market_share.json  os_distribution.json
market_agent/models/: __init__.py  objects.py
scripts/: README.md  download_data.py  fetch_chrome_versions.py  fetch_chromium_versions.py  fetch_device_specs.py  fetch_edge_versions.py  fetch_opera_versions.py  parse_caniuse.py  scrape_gsmarena.py  update_browser_versions.py  update_readme.py
tests/: __init__.py  test_core.py  test_filters.py  test_generator.py  test_loader.py  validation_script.py
uaforge/: exceptions.py
uaforge/core/: alias_sampler.py  client_hints.py  generator.py  versioning.py
uaforge/data/: __init__.py  chrome_versions.json  chromium_versions.json  device_models.json  edge_versions.json  loader.py  mappings.py  market_share.json  opera_versions.json  os_distribution.json
uaforge/models/: enums.py  objects.py
