[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UAForge"
version = "0.1.0"
description = "Enterprise-grade, deterministic User Agent and Client Hint generator based on real-world market share."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Explicitly include required data files
# These small files are committed to git and included in the package
"uaforge" = [
    "data/device_models.json",
    "data/market_share.json",
    "data/os_distribution.json",
    "data/*.txt"
]
# Large files (chrome_versions, chromium_versions, edge_versions, opera_versions)
# are in .gitignore and downloaded during pip install via setup.py

[tool.setuptools.packages.find]
where = ["."]
include = ["uaforge*"]

[tool.mypy]
strict = true
ignore_missing_imports = true
