[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UAForge"
version = "0.1.0"
description = "Enterprise-grade, deterministic User Agent and Client Hint generator based on real-world market share."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# ALL JSON data files are downloaded during pip install via setup.py
# They are NOT included in the package or committed to git
# Only include non-JSON data files if any exist
"uaforge" = [
    "data/*.txt"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uaforge*"]

[tool.mypy]
strict = true
ignore_missing_imports = true
